# rugix-admin

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  mise.toml  sidex.toml
.github/workflows/: build.yml  check-and-lint.yml
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts  vite-env.d.ts
frontend/src/features/apps/: AppDetailPanel.tsx  AppInventory.tsx  AppsPage.tsx  GenerationTable.tsx
frontend/src/features/components/: ComponentsPage.tsx
frontend/src/features/install/: UploadPanel.tsx
frontend/src/features/jobs/: ActiveOperation.tsx  JobLogSurface.tsx  JobsPage.tsx
frontend/src/features/shell/: DemoDisclaimer.tsx  PageTitle.tsx  TabButton.tsx  TopNav.tsx
frontend/src/features/system/: StatusCell.tsx  SystemPage.tsx
frontend/src/shared/: styles.ts
frontend/src/shared/components/: ActionGroup.tsx  Badge.tsx  EmptyState.tsx  ErrorBanner.tsx  Input.tsx  MiniMetric.tsx  ProgressMeter.tsx  Surface.tsx
frontend/src/shared/lib/: classes.ts  errors.ts  format.ts  ids.ts  jobEvents.ts  theme.ts
frontend/src/shared/status/: AppStatusBadge.tsx  GenerationStatusBadge.tsx  JobStatusBadge.tsx
frontend/tests/: conftest.py  pyproject.toml
frontend/tests/e2e/: test_admin.py
frontend/tests/fixtures/: fake_rugix_ctrl.py
installer/: install-rugix-admin.sh
schemas/: api.sidex  apps.sidex  events.sidex  jobs.sidex
scripts/: build-binaries.sh
src/: assets.rs  ctrl.rs  error.rs  handlers.rs  jobs.rs  main.rs
