[package]
name = "rugix-admin"
edition = "2021"
version = "0.1.0"
authors = ["Silitics GmbH <info@silitics.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rugix/rugix-admin/"
homepage = "https://rugix.org/"
description = "Rugix Admin web management interface."

[dependencies]
axum = { version = "0.6.19", features = ["multipart"] }
clap = { version = "4.3.17", features = ["derive"] }
futures = "0.3.31"
include_dir = "0.7.4"
indexmap = { version = "2.5.0", features = ["serde"] }
jiff = { version = "0.2.1", features = ["serde"] }
mime_guess = "2.0.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
si-observability = { version = "0.1.2", features = ["clap4"] }
sidex = { git = "https://github.com/silitics/sidex.git" }
sidex-serde = { git = "https://github.com/silitics/sidex.git" }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
sidex-build-rs = { git = "https://github.com/silitics/sidex.git" }

[lints.clippy]
needless_borrows_for_generic_args = "allow"
new_without_default = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
overflow-checks = true
