[project]
name = "rugix-admin-frontend-tests"
version = "0.0.0"
description = "End-to-end tests for Rugix Admin."
requires-python = ">=3.12"
dependencies = [
  "pytest>=8.0",
  # Keep this minor version aligned with nixpkgs#playwright-driver.browsers.
  "playwright>=1.60,<1.61",
  "pytest-playwright>=0.7,<0.8",
]

[tool.pytest.ini_options]
testpaths = ["e2e"]
addopts = ["-ra", "--strict-markers", "--tb=short"]
markers = [
  "e2e: browser-driven end-to-end tests",
]
